--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "debug-prettier": "npx prettier --debug-check ."
   },
   "dependencies": {
     "react": "^18",
@@ -22,7 +23,11 @@
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "eslint": "^8",
-    "eslint-config-next": "14.1.0"
+    "eslint-config-next": "14.1.0",
+    "prettier-plugin-tailwindcss": "^0.4.0",
+    "@trivago/prettier-plugin-sort-imports": "^4.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "prettier": "^2.0.2"
   },
   "engines": {
     "node": "20.11.0"
