--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "debug-prettier": "npx prettier --debug-check ."
+    "debug-prettier": "npx prettier --debug-check .",
+    "format-prettier": "prettier --write ."
   },
   "dependencies": {
     "react": "^18",
@@ -27,7 +28,12 @@
     "prettier-plugin-tailwindcss": "^0.4.0",
     "@trivago/prettier-plugin-sort-imports": "^4.0.0",
     "eslint-config-prettier": "^9.1.0",
-    "prettier": "^2.0.2"
+    "prettier": "^2.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.20.0",
+    "@typescript-eslint/parser": "^6.20.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.1.0",
+    "eslint-plugin-react": "^7.33.2"
   },
   "engines": {
     "node": "20.11.0"
